--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.volley:volley:1.1.1'}
+
+    //for future use with places
+//    implementation 'com.google.android.gms:play-services-places:15.0.1'
+
+}
